membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan init</title>
+    <title>Latihan git</title>
 </head>
 <body>
-    <h1>Profile Company</h1>
+    <header>ini adalah header</header>
+
+    <h1>PT Maju Sejahtera</h1>
 
     <div>lorem ipsum</div>
+
+    <footer>ini adalah footer</footer>
 </body>
 </html>
